--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
-    "build": "node build/build.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.11",
     "express": "^4.16.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
