--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     "axios": "^0.18.0",
     "bootstrap-vue": "^2.0.0-rc.11",
     "express": "^4.16.3",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.11.0",
     "sass-loader": "^7.0.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
+    "vue2-google-maps": "^0.10.6",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
